setup/webhook/kubernetes/namespace.yaml
# Author: Anil Saravade
# Copyright: Copyright (©) 2020. SwapStyle. All rights reserved.

apiVersion: v1
kind: Namespace
metadata:
  name: webhook-ns
  labels:
    app: webhook
